--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <title>Hair & Scalp Disease Detection</title>
+  <title>Appointment</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">HairScalp</a>
+    <a class="navbar-brand" href="/">MedPlant</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/">Home </a>
         </li>
 
@@ -41,136 +41,51 @@
     </div>
   </nav>
 
-  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="static/images/image1.png" class="d-block w-100 img-fluid" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="static/images/image2.png" class="d-block w-100 img-fluid" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="static/images/image3.png" class="d-block w-100 img-fluid" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+  <div class="container my-4" style="display: flex; justify-content: center; align-items: center;">
+    <h1 class="display-4 fw-normal text-body-emphasis font-weight-bold">Book Your Appointment</h1>
   </div>
 
-  <div class="jumbotron jumbotron-fluid my-2 bg-muted text-center py-5">
-    <div class="container">
-      <h1 class="display-4">The Unremovable Crown</h1>
-      <p class="lead"><big>Invest in your hair, it's the crown you never take off.</big>
-      </p>
+  <div class="container mx-auto mt-2">
 
-
-      <div class="row mt-4 mb-0">
-        <div class="col"></div>
-        <div class="col">
-          <a href="/info">
-            <button class="btn btn-outline-primary bg-primary text-white my-2 my-sm-0" type="submit">See Info
-              --></button>
-          </a>
-        </div>
-        <div class="col">
-          <a href="/contact">
-            <button class="btn btn-outline-primary bg-primary text-white my-2 my-sm-0" type="submit">Contact Us
-              --></button>
-          </a>
-        </div>
-        <div class="col"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-    <h1 class="display-4 fw-normal text-body-emphasis font-weight-bold">Hair And Scalp Disease Detection</h1>
-    <p class="fs-5 text-body-secondary font-weight-normal mx-5"><big>Click on the Upload button to upload the desired image of hair or scalp disease. Confirm your uploaded image by seeing it in the preview image section below. Then click on the Submit button to get the name and confidence of the disease.</big></p>
-  </div>
-
-
-  <img class="container my-2" src="static/images/img_icon.png" id="dispimg"
-    style="display: flex; justify-content: center; align-items: center;height: 300px; width: 300px; border: 2px dashed gray;">
-
-  </div>
-
-  <div class="container my-2" style="display: flex; justify-content: center; align-items: center;">
-    <form action="/submit" method="post" enctype="multipart/form-data">
-      <label for="fileupload"
-        style="display: block; width: 130px; background: #e3362c; color: #fff; padding: 12px; margin: 10px; border-radius: 5px; cursor:pointer; text-align: center;"><strong>Upload Image</strong></label>
-
-      <input type="file" name="inputfile" id="fileupload" accept="image/jpeg, image/jpg, image/png" style="display: none;">
-
-      <div class="container" style="display: flex; justify-content: center; align-items: center;">
-        <button class="btn btn-success" style="width: 100px;"><strong>Submit</strong></button>
+    <form action="/appointment" method="POST" style="border: 1px dotted gray;" class="px-5 py-5">
+ 
+      <div class="form-group">
+        <label for="Name">Your Name</label>
+        <input type="Name" class="form-control" id="Name" name="Name" placeholder="Enter Name">
       </div>
 
+      <br>
+      <div class="form-group">
+        <label for="exampleFormControlSelect2">Select Gender</label>
+        <select class="form-control" id="exampleFormControlSelect2" name="Gender">
+          <option>(Select Gender)</option>
+          <option>Male</option>
+          <option>Female</option>
+          <option>Other</option>
+        </select>
+      </div>
+      <br>
+
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address (Optional)</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" name="Email" aria-describedby="emailHelp"
+          placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <br>
+      <div class="form-group">
+        <label for="Phone">Phone Number</label>
+        <input type="number" class="form-control" id="Phone" placeholder="Enter Phone Number" name="Phone">
+      </div>
+      <br>
+      <div class="form-group">
+        <label for="Date">Choose Appointment Date</label>
+        <input type="date" class="form-control" id="Date" name="Date">
+      </div>
+      
+      <button type="submit" class="btn btn-primary">Book Appointment</button>
     </form>
   </div>
-
-
-  <div class="contianer mt-0 mx-auto" style="width: 18rem;">
-    <ul class="list-group list-group-flush">
-      <hr>
-      <li class="list-group-item"><strong>Disease Name : {{result}}</strong></li>
-      <li class="list-group-item"><strong>Confidence : {{accuracy}}%</strong></li>
-      <hr>
-    </ul>
-
-  </div>
-  
-  <!-- Diplay the information and causes here -->
-  <div class="container">
-    <hr>
-    <h3>{{result}}</h3><br>
-    <h5 style="text-align: justify;">{{info}}</h5>
-    <hr>
-  </div>
-
- 
-  <div class="jumbotron py-4">
-    <h1 class="display-4 text-center">Book an Appointment!</h1>
-    <p class="lead text-center">Diagnost with a disease ? No need to worry, we are here to help you out.</p>
-    <hr class="my-4">
-    <p class="text-center">It's the right time for your treatment! Book an Appointment to get the right medication for you.</p>
-    <p class="lead">
-      <div class="container" style="display: flex; justify-content:center;align-items:center;">
-        <a class="btn btn-primary btn-lg mt-2" href="/appointment" role="button">Book 
-          Appointment
-        </a>
-      </div>
-    </p>
-  </div>
-  <hr>
-  <!-- location on map -->
-  <div class="container">
-    <h1 class="text-center">Do Visit Us Once!</h1>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4500.487360221436!2d73.86336697492436!3d18.463554727031383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2ea950f616219%3A0x321bdae2cea9f064!2sVishwakarma%20Institute%20of%20Technology!5e0!3m2!1sen!2sin!4v1701397089396!5m2!1sen!2sin" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
-  <hr>
 
   <footer class="bg-dark text-center text-white position-relative mt-3">
     <!-- Grid container -->
@@ -183,7 +98,7 @@
       <!-- Section: Text -->
       <section class="mb-4">
         <p>
-          A web based platform that uses images or photographs to automate the process of hair and scalp disease identification. Users are able to input images of scalp and hair, and the algorithm will correctly identify the disease associated with that problem.The sytem returns the desired results to the user which includes the name of the respective disease and the confidence associated with it, that signifies the matching percentage with the actual disease.
+          A web based platform that uses images or photographs to automate the process of hair and scalp disease identification. Users are able to input images of scalp and hair, and the algorithm will correctly identify the disease associated with that problem.The sytem returns the desired results to the user which includes the name of the respective disease and the confidence associated with it, that signifies the matching percentage with the actual disease. 
         </p>
       </section>
       <!-- Section: Text -->
@@ -299,14 +214,8 @@
     <!-- Copyright -->
   </footer>
 
-
-
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
-
-
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
@@ -317,7 +226,6 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 
-  <!--E mail Function Script-->
   <script>
     function showMail(a, b) {
       document.getElementById(a).innerHTML = b;
@@ -327,16 +235,11 @@
       document.getElementById(a).innerHTML = "";
     }
 
-    // JS code for uploading pic...
-
-    let LogoPic = document.getElementById("dispimg");
-    let InputPic = document.getElementById("fileupload");
-
-    InputPic.onchange = function () {
-      LogoPic.src = URL.createObjectURL(InputPic.files[0]); //creating the url of the input file and then updating it
+    function preview() {
+      alert(document.getElementById('fileupload').value)
+      document.getElementById('dispimg').src = document.getElementById('fileupload').value;
     }
   </script>
-
 </body>
 
 </html>
